<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/title_of_mainScreen_panel"
            android:textColor="@color/backgroundWhite"
            android:textSize="@dimen/text_size_28" />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/buttonSearch"
        style="@style/Main_ButtonStyle"
        android:text="@string/search"
        app:cornerRadius="@dimen/button_cornerRadius_16"
        app:icon="@drawable/search_main"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_horizontal_12"
        app:iconTint="@color/iconTintColor"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/buttonLibrary"
        style="@style/Main_ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/media"
        app:cornerRadius="@dimen/button_cornerRadius_16"
        app:icon="@drawable/library_main"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_horizontal_12"
        app:iconTint="@color/iconTintColor"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/Main_ButtonStyle"
        android:text="@string/settings"
        app:cornerRadius="@dimen/button_cornerRadius_16"
        app:icon="@drawable/settings_main"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_horizontal_12"
        app:iconTint="@color/iconTintColor"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
